--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "^4.5.2"
   },
   "resolutions": {
-    "yargs-parser": "^20.2.2"
+    "yargs-parser": "^20.2.2",
+    "trim-newlines": "^3.0.1"
   },
   "scripts": {
     "test:unit": "lwc-jest",
